# OmniMem

./: .gitignore  README.md  SVI-OmniMem_README.md  memgallery_dual_encoder_pipeline.py  memgallery_gme_pipeline.py  memgallery_svi_pipeline.py  opd_mm_baseline.md  pyproject.toml
benchmarks/: README.md
dual_encoder_memory/: __init__.py  encoders.py  evidence.py  models.py  retriever.py  store.py
examples/: use_svi_adapter.py
gme_memory/: __init__.py  _gme_runtime.py  encoders.py  models.py  retriever.py  store.py
ollama/: Modelfile.gemma3-12b-it-q4km-judge  Modelfile.qwen3-vl-4b-instruct-policy-ctx4k  Modelfile.qwen3-vl-4b-instruct-q4km-policy  Modelfile.qwen3-vl-4b-instruct-q4km-policy-text  Modelfile.qwen3-vl-4b-thinking-policy-ctx4k  Modelfile.qwen3-vl-8b-instruct-ctx4k  Modelfile.qwen3-vl-8b-instruct-ctx8k
omnimem/: __init__.py  cli.py  config.py
opd_mm_baseline/: README.md  __init__.py  build_hard_samples.py  build_opd_dataset.py  clients.py  executor.py  hard_sample_teacher_eval.py  interactive.py  memeye.py  memeye_interactive_pipeline.py  memgallery.py  memgallery_interactive_pipeline.py  memgallery_online_pipeline.py  memgallery_pipeline.py  models.py  online.py  opd_online_train.py  opd_stream_train.py  opd_train.py  retrieval.py  schema.py  sft.py  training.py
svi_omnimem/: __init__.py  adapter.py  config.py  executor.py  extractor.py  models.py  planner.py  promoter.py  query_parser.py  retriever.py  stores.py  utils.py  verifier.py
tests/: test_dual_encoder_memory.py  test_gme_memory.py  test_opd_mm_baseline.py  test_opd_mm_interactive.py  (+4 more)
(+27 files in other folders)
